--- a/assets/translations/ja-JP.json
+++ b/assets/translations/ja-JP.json
@@ -1,6 +1,6 @@
 {
   "@@locale": "ja",
-  "app_title": "推しメンアナライザ",
+  "app_title": "推し麺アナライザ",
   "home": {
     "gallery_select": "ギャラリーから選択",
     "camera_capture": "カメラで撮影",
