--- a/assets/translations/ja-JP.json
+++ b/assets/translations/ja-JP.json
@@ -4,8 +4,8 @@
   "home": {
     "gallery_select": "ギャラリーから選択",
     "camera_capture": "カメラで撮影",
-    "search_nearby": "付近のラーメンを検索",
-    "search_disabled": "検索できません",
+    "search_nearby": "付近のラーメンを探す",
+    "search_disabled": "ラーメンの画像を貼ってください",
     "analysis_result": "分析結果: {}",
     "error": "エラー: {}",
     "select_image": "画像を選択してください"
